src/objects/Lead.object
<CustomObject>
  <recordTypes>
    <fullName>Distributor_Deal_Registration_Approved</fullName>
    <active>true</active>
    <businessProcess>SFCCLtngPtr__Deal Registration</businessProcess>
    <description>Distributor Deal Registration After Approval</description>
    <label>Distributor Deal Registration Approved</label>
  </recordTypes>
  <sharingModel>Private</sharingModel>
  <validationRules>
    <fullName>DistributorPRM_Status_Rule</fullName>
    <active>true</active>
    <description>It will check whether Distributor PRM Status is Approved or not</description>
    <errorConditionFormula>AND
  (
	ISPICKVAL(DistributorPRM_Status__c, 'Approved'),
      $Profile.Name = 'PRM Partner Relationship Manager Login',
						ConvertedOpportunityId = '',
     OR 
      (
       ISCHANGED(Status), ISCHANGED(Description), ISCHANGED(Deal_Name__c), 
       ISCHANGED(Distributor_PRM_Rejection_Reason__c), 
       ISCHANGED(Other_Rejection_Reason_Distributor_PRM__c), ISCHANGED( City ), 
       ISCHANGED(Street),  ISCHANGED(CurrencyIsoCode),
	ISCHANGED(Solution__c),ISCHANGED(Close_Date__c),
	ISCHANGED(DistributorPRM__c),ISCHANGED(PRMSales_Support_Requested__c),
	ISCHANGED(PRMTechnical_Support_Requested__c),
	ISCHANGED(PRMPricing_Support_Requested__c),ISCHANGED(PRMOther_Support_Requested__c),
	ISCHANGED(Further_Explanation_Of_the_Request__c),ISCHANGED(Distributor_Partner_Company__c),
	ISCHANGED(Customer_Type__c),ISCHANGED(Company),
	ISCHANGED(Activity_Sector_Name__c),ISCHANGED(Email),ISCHANGED(Country__c),
	ISCHANGED( State ),ISCHANGED( PostalCode ), ISCHANGED(  Salutation ),ISCHANGED(  FirstName ),ISCHANGED(  MiddleName ),ISCHANGED(  LastName ), ISCHANGED(  Suffix ), ISCHANGED(   PostalCode ), ISCHANGED(     PRMDOD_Requested__c )
      )
   )</errorConditionFormula>
    <errorMessage>This record is currently pending approval and can only by edited by the Deal Registration Approver.</errorMessage>
  </validationRules>
</CustomObject>