src/objects/Lead/fields/Enterprise_Main_Solution__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Main_Solution__c</fullName>
    <label>Enterprise Main Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Enterprise_Main_Solution__gvs</valueSetName>
    </valueSet>
</CustomField>