src/objects/Lead/fields/Lead_BG__c.field-meta.xml
<CustomField>
    <fullName>Lead_BG__c</fullName>
    <label>Lead BG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Group_Values__gvs</valueSetName>
    </valueSet>
</CustomField>