src/objects/Lead/fields/Lead_BU__c.field-meta.xml
<CustomField>
    <fullName>Lead_BU__c</fullName>
    <label>Lead BU</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_BG__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Business_Units__gvs</valueSetName>
    </valueSet>
</CustomField>