src/objects/Lead/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <label>Lead Source Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lead_Source_Detail</valueSetName>
    </valueSet>
</CustomField>